Update CMakeLists.txt for Qt6 support and update workflow file

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -20,6 +20,7 @@ jobs:
         host: 'windows'
         target: 'desktop'
         arch: 'win64_msvc2019_64'
+        modules: 'qtserialport'
 
     - name: Configure
       run: |
