--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -44,8 +44,8 @@ jobs:
         mkdir deploy
         copy build\Release\asdKeypad_cpp.exe deploy\
         windeployqt --no-translations deploy\asdKeypad_cpp.exe
-        # Copy Visual C++ Runtime files
-        copy "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Redist\MSVC\14.29.30133\x64\Microsoft.VC142.CRT\*" deploy\
+        # Copy Visual C++ Runtime files from 2022 location
+        copy "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\*\x64\Microsoft.VC143.CRT\*" deploy\
 
     - name: Create ZIP
       run: |
